# Python_project

./: .coverage  README.md  pyproject.toml
.github/workflows/: python-poetry.yml  yi.yml
checkio1/: image_conversion.py
docs/source/: checkio1.rst  modules.rst
source/: conf.py  index.rst
tests/: test_image_conversion.py
