[tool.poetry]
name = "checkio1"
version = "0.1.0"
description = "This project converts a blurred image with low resolution to a high-resolution image to use as a wallpaper for my project."
authors = ["Hussein Tarhini <husseintarhini168@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 100  # To increase the default line length limit from 79 to 100
ignore = ["E501", "W291", "W293"]  # Example of ignoring specific rules
exclude = [
    ".venv",  # Exclude virtual environment folder
    "__pycache__",  # Exclude bytecode cache
    "site-packages"  # Exclude any package folders
]

