[tool.poetry]
name = "checkio1"
version = "0.1.0"
description = "This project converts a blurred image with low resolution to a high-resolution image to use as a wallpaper for my project."
authors = ["Hussein Tarhini <husseintarhini168@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^11.0.0"
pylint = "^3.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
